-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P1
-
Affects Version/s: hs25, 8, 8u20
-
Component/s: hotspot
-
Environment:
Java(TM) SE Runtime Environment (build 1.8.0-ea-b120)
Related JavaFX bug report that the issue occured in b112.
-
b68
-
Verified
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8032575 | 9 | Vladimir Ivanov | P1 | Resolved | Fixed | b03 |
| JDK-8035048 | 8u20 | Vladimir Ivanov | P1 | Closed | Fixed | b03 |
| JDK-8033633 | 8u11 | Vladimir Ivanov | P1 | Resolved | Fixed | b01 |
| JDK-8033311 | 8u5 | Vladimir Ivanov | P1 | Resolved | Fixed | b07 |
| JDK-8032966 | 8 | Vladimir Ivanov | P1 | Closed | Fixed | b127 |
| JDK-8035217 | emb-8u6 | Vladimir Ivanov | P1 | Closed | Fixed | b06 |
Download and run the sample. Switch between 0 and 1 fixed columns a few times. After a while, the table changes, because ColumnDefinitionIF#editableIf() has been called on CVPriceColumnDefinition.
There's no change in stack trace before and after.
Before it's:
at vsa.vfx.experiment.demo.table.vfxtable.main.CVPriceColumnDefinition.editableIf(CVPriceColumnDefinition.java:40)
at vsa.vfx.experiment.demo.table.vfxtable.main.TextFieldColumnDefinition.collaborator(TextFieldColumnDefinition.java:44)
at vsa.vfx.experiment.demo.table.vfxtable.main.CVPriceColumnDefinition.collaborator(CVPriceColumnDefinition.java:18)
at vsa.vfx.control.table.vfxtables.VfxTableColumns.lambda$1(VfxTableColumns.java:32)
at vsa.vfx.control.table.vfxtables.VfxTableColumns$$Lambda$14/2025470705.call(Unknown Source)
at com.sun.javafx.scene.control.skin.TableRowSkin.getCell(TableRowSkin.java:80)
at com.sun.javafx.scene.control.skin.TableRowSkin.getCell(TableRowSkin.java:46)
at com.sun.javafx.scene.control.skin.TableRowSkinBase.createCell(TableRowSkinBase.java:652)
at com.sun.javafx.scene.control.skin.TableRowSkinBase.recreateCells(TableRowSkinBase.java:646)
at com.sun.javafx.scene.control.skin.TableRowSkinBase.checkState(TableRowSkinBase.java:591)
at com.sun.javafx.scene.control.skin.TableRowSkinBase.layoutChildren(TableRowSkinBase.java:246)
at javafx.scene.control.Control.layoutChildren(Control.java:574)
at javafx.scene.Parent.layout(Parent.java:1076)
...
After it changes to:
at vsa.vfx.experiment.demo.table.vfxtable.main.ColumnDefinitionIF.editableIf(ColumnDefinitionIF.java:43)
at vsa.vfx.experiment.demo.table.vfxtable.main.TextFieldColumnDefinition.collaborator(TextFieldColumnDefinition.java:44)
at vsa.vfx.experiment.demo.table.vfxtable.main.CVPriceColumnDefinition.collaborator(CVPriceColumnDefinition.java:18)
at vsa.vfx.control.table.vfxtables.VfxTableColumns.lambda$1(VfxTableColumns.java:32)
at vsa.vfx.control.table.vfxtables.VfxTableColumns$$Lambda$14/2025470705.call(Unknown Source)
at com.sun.javafx.scene.control.skin.TableRowSkin.getCell(TableRowSkin.java:80)
at com.sun.javafx.scene.control.skin.TableRowSkin.getCell(TableRowSkin.java:46)
at com.sun.javafx.scene.control.skin.TableRowSkinBase.createCell(TableRowSkinBase.java:652)
at com.sun.javafx.scene.control.skin.TableRowSkinBase.recreateCells(TableRowSkinBase.java:646)
at com.sun.javafx.scene.control.skin.TableRowSkinBase.checkState(TableRowSkinBase.java:591)
at com.sun.javafx.scene.control.skin.TableRowSkinBase.layoutChildren(TableRowSkinBase.java:246)
at javafx.scene.control.Control.layoutChildren(Control.java:574)
at javafx.scene.Parent.layout(Parent.java:1076)
...
And sometimes I get:
at vsa.vfx.experiment.demo.table.vfxtable.main.CVPriceColumnDefinition.editableIf(CVPriceColumnDefinition.java:40)
at vsa.vfx.experiment.demo.table.vfxtable.main.TextFieldColumnDefinition.collaborator(TextFieldColumnDefinition.java:44)
at vsa.vfx.experiment.demo.table.vfxtable.main.CVNameColumnDefinition.collaborator(CVNameColumnDefinition.java:12)
at vsa.vfx.control.table.vfxtables.VfxTableColumns.lambda$1(VfxTableColumns.java:32)
at vsa.vfx.control.table.vfxtables.VfxTableColumns$$Lambda$14/2025470705.call(Unknown Source)
at com.sun.javafx.scene.control.skin.TableRowSkin.getCell(TableRowSkin.java:80)
at com.sun.javafx.scene.control.skin.TableRowSkin.getCell(TableRowSkin.java:46)
at com.sun.javafx.scene.control.skin.TableRowSkinBase.createCell(TableRowSkinBase.java:652)
at com.sun.javafx.scene.control.skin.TableRowSkinBase.recreateCells(TableRowSkinBase.java:646)
at com.sun.javafx.scene.control.skin.TableRowSkinBase.checkState(TableRowSkinBase.java:591)
at com.sun.javafx.scene.control.skin.TableRowSkinBase.layoutChildren(TableRowSkinBase.java:246)
at javafx.scene.control.Control.layoutChildren(Control.java:574)
at javafx.scene.Parent.layout(Parent.java:1076)
...
I've tried to create some simpler sample, but was unsuccessful.
- backported by
-
JDK-8032575 CHA ignores default methods during analysis leading to incorrect code generation
-
- Resolved
-
-
JDK-8033311 CHA ignores default methods during analysis leading to incorrect code generation
-
- Resolved
-
-
JDK-8033633 CHA ignores default methods during analysis leading to incorrect code generation
-
- Resolved
-
-
JDK-8032966 CHA ignores default methods during analysis leading to incorrect code generation
-
- Closed
-
-
JDK-8035048 CHA ignores default methods during analysis leading to incorrect code generation
-
- Closed
-
-
JDK-8035217 CHA ignores default methods during analysis leading to incorrect code generation
-
- Closed
-
- duplicates
-
JDK-8031089 JT_JDK, java.util.stream tests, AbstractMethodError: Method java/util/stream/Nodes$ConcNode$OfPrimitive.newArray(I)Ljava/lang/Object; is abstract
-
- Closed
-
-
JDK-8032615 java/util/stream/boottest/java/util/stream/DoubleNodeTest fails with AbstractMethodError
-
- Closed
-
- relates to
-
JDK-8031089 JT_JDK, java.util.stream tests, AbstractMethodError: Method java/util/stream/Nodes$ConcNode$OfPrimitive.newArray(I)Ljava/lang/Object; is abstract
-
- Closed
-