8031695: CHA ignores default methods during analysis leading to incorrect code generation

Reviewed-by: jrose, acorn, hseigel, lfoltan